Http client and NIO impl